[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Muted.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/UbuntuMono.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=5]
Button/styles/disabled = null
Button/styles/focus = null
TextEdit/fonts/font = null

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.388235, 0.65098, 0.94902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.388235, 0.65098, 0.94902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.180392, 0.541176, 0.94902, 1 )
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.6, 0.6, 0.6, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.541176, 0.94902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.180392, 0.541176, 0.94902, 1 )
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Generator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
script = ExtResource( 1 )

[node name="TerminalBackground" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 7 )

[node name="Terminal" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -492.0
margin_top = 20.0
margin_right = 492.0
margin_bottom = 540.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 2
theme = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[color=#00FF00]serve server.py[/color]
[color=#FF00FF]space to mute/unmute[/color]"
text = "serve server.py
space to mute/unmute"
scroll_following = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -230.0
margin_top = -36.0
margin_right = 230.0
margin_bottom = -11.0
alignment = 1

[node name="GenerateButton" type="Button" parent="HBoxContainer"]
margin_left = 31.0
margin_right = 161.0
margin_bottom = 25.0
rect_min_size = Vector2( 130, 0 )
focus_neighbour_left = NodePath("../ChangeNGram")
focus_neighbour_right = NodePath("../ChangeNGram")
focus_next = NodePath("../ChangeNGram")
focus_previous = NodePath("../ChangeNGram")
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Generate"

[node name="ChangeNGram" type="Button" parent="HBoxContainer"]
margin_left = 165.0
margin_right = 295.0
margin_bottom = 25.0
rect_min_size = Vector2( 130, 0 )
rect_pivot_offset = Vector2( 835, -14 )
focus_neighbour_left = NodePath("../GenerateButton")
focus_neighbour_right = NodePath("../GenerateButton")
focus_next = NodePath("../GenerateButton")
focus_previous = NodePath("../GenerateButton")
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Set n-gram"

[node name="NGram" type="SpinBox" parent="HBoxContainer"]
margin_left = 299.0
margin_right = 429.0
margin_bottom = 25.0
rect_min_size = Vector2( 130, 25 )
focus_mode = 1
min_value = 3.0
max_value = 20.0
value = 3.0
suffix = "grams"

[node name="SoundButton" type="Button" parent="."]
margin_left = 10.0
margin_top = 558.0
margin_right = 44.0
margin_bottom = 592.0

[node name="SoundState" type="Sprite" parent="SoundButton"]
position = Vector2( 17, 17 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="GenerateGET" type="HTTPRequest" parent="."]

[node name="NGramGET" type="HTTPRequest" parent="."]

[node name="NGramPUT" type="HTTPRequest" parent="."]

[node name="RPMDown" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="pressed" from="HBoxContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ChangeNGram" to="." method="_on_ChangeNGram_pressed"]
[connection signal="value_changed" from="HBoxContainer/NGram" to="." method="_on_NGram_value_changed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="request_completed" from="GenerateGET" to="." method="_on_GenerateGET_request_completed"]
[connection signal="request_completed" from="NGramGET" to="." method="_on_NGramGET_request_completed"]
[connection signal="request_completed" from="NGramPUT" to="." method="_on_NGramPUT_request_completed"]
[connection signal="timeout" from="RPMDown" to="." method="_on_RPMDown_timeout"]
